RESOLVED FIXED101616
AX: WebKit exposes ARIA rowheader role as AXUnknown when not contained in table/grid
https://bugs.webkit.org/show_bug.cgi?id=101616
Summary AX: WebKit exposes ARIA rowheader role as AXUnknown when not contained in tab...
chris fleizach
Reported 2012-11-08 09:19:01 PST
WebKit exposes ARIA rowheader role as AXUnknown when not contained in table/grid
Attachments
patch (3.90 KB, patch)
2012-11-08 09:27 PST, chris fleizach
no flags
chris fleizach
Comment 1 2012-11-08 09:27:35 PST
chris fleizach
Comment 2 2012-11-08 09:28:54 PST
WebKit Review Bot
Comment 3 2012-11-13 13:25:53 PST
Comment on attachment 173056 [details] patch Clearing flags on attachment: 173056 Committed r134475: <http://trac.webkit.org/changeset/134475>
WebKit Review Bot
Comment 4 2012-11-13 13:25:56 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.