WebKit exposes ARIA rowheader role as AXUnknown when not contained in table/grid https://bugs.webkit.org/show_bug.cgi?id=101616

Reviewed by Beth Dakin.

Source/WebCore:

If the rowheader role is exposed because the element is not within a table, the mac platform
should map that to a generic group.

Test: platform/mac/accessibility/rowheader-outside-table-role.html

* accessibility/mac/WebAccessibilityObjectWrapper.mm:
(createAccessibilityRoleMap):

LayoutTests:

* platform/mac/accessibility/rowheader-outside-table-role-expected.txt: Added.
* platform/mac/accessibility/rowheader-outside-table-role.html: Added.


Canonical link: https://commits.webkit.org/120208@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@134475 268f45cc-cd09-0410-ab3c-d52691b4dbfc